# FastAPiTutor

./: .gitignore  FASTAPI_TUTORIAL.md  PROJECTS_GUIDE.md  README.md  pyproject.toml
app/: __init__.py  database.py  main.py  models.py  user_models.py
app/routers/: tasks.py  users.py
projects/: __init__.py
projects/order_inventory_api/: README.md  __init__.py
projects/order_inventory_api/app/: __init__.py  config.py  database.py  main.py  models.py
projects/order_inventory_api/app/routers/: __init__.py  orders.py  products.py
projects/order_inventory_api/app/services/: __init__.py  inventory_service.py  order_service.py
projects/order_inventory_api/tests/: __init__.py  test_orders.py
projects/rbac_android_app/: .gitignore  README.md  settings.gradle.kts
projects/rbac_android_app/app/: build.gradle.kts  proguard-rules.pro
projects/rbac_android_app/app/src/debug/res/xml/: network_security_config.xml
projects/rbac_android_app/app/src/main/: AndroidManifest.xml
projects/rbac_android_app/app/src/main/res/drawable/: ic_launcher.xml
projects/rbac_project_api/: README.md  __init__.py  pyproject.toml
projects/rbac_project_api/app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  security.py
projects/rbac_project_api/app/routers/: __init__.py  auth.py  projects.py  users.py
projects/rbac_project_api/app/services/: __init__.py  project_service.py  user_service.py
projects/rbac_project_api/tests/: __init__.py  conftest.py  helpers.py  test_project_member_delete.py  test_projects.py  test_user_active.py
tests/: test_tasks.py
(+18 files in other folders)
