[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-starter-api"
version = "0.1.0"
description = "A beginner-friendly FastAPI backend API project with SQLModel."
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pyjwt>=2.8.0",
    "pwdlib[argon2]>=0.2.0",
    "sqlmodel>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "projects"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*", "projects*"]
